@@ -18,41 +18,60 @@
 
 package com.gruelbox.orko.notification;
 
+import java.util.Map;
+
 import javax.inject.Inject;
 import javax.ws.rs.client.Client;
 import javax.ws.rs.client.Entity;
 import javax.ws.rs.client.WebTarget;
+import javax.ws.rs.core.HttpHeaders;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import jersey.repackaged.com.google.common.collect.ImmutableMap;
+import io.dropwizard.client.JerseyClientBuilder;
+import io.dropwizard.client.JerseyClientConfiguration;
+import io.dropwizard.setup.Environment;
+import io.dropwizard.util.Duration;
 
-class TelegramService {
+class AppriseService {
 
-  private static final Logger LOGGER = LoggerFactory.getLogger(TelegramService.class);
+  private static final Logger LOGGER = LoggerFactory.getLogger(AppriseService.class);
 
-  private final WebTarget telegramTarget;
-  private final TelegramConfiguration configuration;
+  private final WebTarget target;
+  private final AppriseConfiguration configuration;
 
   @Inject
-  TelegramService(TelegramConfiguration configuration, Client client) {
+  AppriseService(AppriseConfiguration configuration, Environment environment) {
     this.configuration = configuration;
-    this.telegramTarget = client.target("https://api.telegram.org/bot" + configuration.getBotToken());
+
+    // Use a custom Jersey client as the microservice is pretty sensitive to encoding
+    JerseyClientConfiguration jerseyClientConfiguration = new JerseyClientConfiguration();
+    jerseyClientConfiguration.setTimeout(Duration.seconds(10));
+    jerseyClientConfiguration.setConnectionTimeout(Duration.seconds(10));
+    jerseyClientConfiguration.setConnectionRequestTimeout(Duration.seconds(10));
+    jerseyClientConfiguration.setGzipEnabled(false);
+    jerseyClientConfiguration.setGzipEnabledForRequests(false);
+    Client client = new JerseyClientBuilder(environment)
+        .using(jerseyClientConfiguration)
+        .build("apprise");
+
+    this.target = client.target(configuration.getMicroserviceUrl());
   }
 
-  void sendMessage(String message) {
+  void send(Notification notification) {
     try {
-      final Response response = telegramTarget
-          .path("sendMessage")
+      final Response response = target
+          .path("/")
           .request()
+          .header(HttpHeaders.CONTENT_ENCODING, "identity")
           .post(
               Entity.entity(
-                  ImmutableMap.of(
-                      "chat_id", configuration.getChatId(),
-                      "text", message
+                  Map.of(
+                      "title", "",
+                      "body", notification.message()
                   ),
                   MediaType.APPLICATION_JSON
               )
